# Legal-GDPR-Agent-in-FastAPI

./: .pylintrc  README.md  main.py  pyproject.toml
agent/: state.py
alembic/: env.py
alembic/versions/: f83410487b55_initial_migration.py
core/: config.py  llm.py  security.py
dependencies/: auth.py
infrastructure/database/: base.py  dependency.py  session.py
infrastructure/database/models/: __init__.py  conversation_model.py  notes_model.py  user_model.py
repositories/: user_repository.py
